--- a/experiments/cfgs/faster_rcnn_end2end.yml
+++ b/experiments/cfgs/faster_rcnn_end2end.yml
@@ -3,9 +3,9 @@ LOG_DIR: faster_rcnn_voc_vgg
 IS_MULTISCALE: False
 NET_NAME: VGGnet
 ANCHOR_SCALES: [8, 16, 32]
-NCLASSES: 21
+NCLASSES: 2
 TRAIN:
-  OHEM: True
+  OHEM: False
   RPN_BATCHSIZE: 2000
   BATCH_SIZE: 300
   LOG_IMAGE_ITERS: 100
