--- a/experiments/cfgs/faster_rcnn_end2end_wider.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_wider.yml
@@ -2,20 +2,20 @@ EXP_DIR: faster_rcnn_voc_vgg
 LOG_DIR: faster_rcnn_voc_vgg
 IS_MULTISCALE: False
 NET_NAME: VGGnet
-ANCHOR_SCALES: [8, 16, 32]
-NCLASSES: 21
+ANCHOR_SCALES: [4, 8, 16, 32]
+NCLASSES: 2
 TRAIN:
-  OHEM: True
+  OHEM: False
   RPN_BATCHSIZE: 2000
   BATCH_SIZE: 300
   LOG_IMAGE_ITERS: 100
   DISPLAY: 10
-  SNAPSHOT_ITERS: 5000
+  SNAPSHOT_ITERS: 10000
   HAS_RPN: True
-  LEARNING_RATE: 0.001
+  LEARNING_RATE: 0.0001
   MOMENTUM: 0.9
   GAMMA: 0.1
-  STEPSIZE: 60000
+  STEPSIZE: 200000
   IMS_PER_BATCH: 1
   BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
   RPN_POSITIVE_OVERLAP: 0.7
