--- a/experiments/cfgs/faster_rcnn_end2end_wider.yml
+++ b/experiments/cfgs/faster_rcnn_end2end_wider.yml
@@ -15,7 +15,7 @@ TRAIN:
   LEARNING_RATE: 0.0001
   MOMENTUM: 0.9
   GAMMA: 0.1
-  STEPSIZE: 200000
+  STEPSIZE: 3000000
   IMS_PER_BATCH: 1
   BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
   RPN_POSITIVE_OVERLAP: 0.7
